--- a/recipes/buffalo-wings.html
+++ b/recipes/buffalo-wings.html
@@ -3,6 +3,7 @@
     <head>
         <title>Jeri's Spicy Buffalo Wings</title>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="../style.css" />
     </head>
     <body>
         <h1>Jeri's Spicy Buffalo Wings</h1>
@@ -37,5 +38,7 @@
             <li>Stir hot sauce into the butter and garlic mixture; reduce heat to low and simmer sauce 5 minutes. Transfer sauce to a large bowl.</li>
             <li>Move drained chicken in batches to the bowl with the sauce and turn to coat. Drizzle any remaining sauce over wings to serve.</li>
         </ol>
+
+        <p><li><a href="../index.html">Back</a></li></p>
     </body>
 </html>
