--- a/recipes/taco-in-a-bag.html
+++ b/recipes/taco-in-a-bag.html
@@ -3,6 +3,7 @@
     <head>
         <title>Taco in a Bag</title>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="../style.css" />
     </head>
     <body>
         <h1>Taco in a Bag</h1>
@@ -25,5 +26,6 @@
             <li>Place ground beef in a large skillet. Cook and stir over medium heat until browned. Drain excess oil. Mix in the taco seasoning and prepare according to the directions on the package.</li>
             <li>With the bags unopened, gently crush the corn chips. Snip the corners off the bags using scissors and slit open the bags along the side edge. Spoon equal amounts of the beef mixture, lettuce, tomato, Cheddar cheese, salsa and sour cream into the bags on top of the crushed chips. Serve in the bag and eat using a fork.</li>
         </ol>
+        <p><li><a href="../index.html">Back</a></li></p>
     </body>
 </html>
