Fixed image sizes

--- a/recipes/best-lasagna.html
+++ b/recipes/best-lasagna.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h1>World's Best Lasagna</h1>
-        <p><img src="../images/lasagna.jpeg" alt="A picture of some delicious-looking lasagna."></p>
+        <p><img class="main" src="../images/lasagna.jpeg" alt="A picture of some delicious-looking lasagna."></p>
         <p><h2>Description</h2>
         <p>It takes a little work, but it is worth it.</p>
         <p><h2>Ingredients</h2></p>
