--- a/recipes/buffalo-wings.html
+++ b/recipes/buffalo-wings.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h1>Jeri's Spicy Buffalo Wings</h1>
-        <p><img src="../images/wings.jpeg" alt="A picture of mouth-watering buffalo wings"></p>
+        <p><img class="main" src="../images/wings.jpeg" alt="A picture of mouth-watering buffalo wings"></p>
         <h2>Description</h2>
         <p>Different layers of flavors create a buffalo wing sauce with a nice bite! Not too hot and not too mild. Serve with ranch or blue cheese dressing.</p>
         <p><h2>Ingredients</h2></p>
