--- a/recipes/taco-in-a-bag.html
+++ b/recipes/taco-in-a-bag.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h1>Taco in a Bag</h1>
-        <p><img src="../images/tacobag.jpeg" alt="two tacos in bags paired with wine for some reason."></p>
+        <p><img class="main" src="../images/tacobag.jpeg" alt="two tacos in bags paired with wine for some reason."></p>
         <p><h2>Description</h2></p>
         <p>I love Taco in a Bag! I had this recipe at the Covered Bridge Festival in Indiana. My family loves them too! The chip bag serves as a shell for the tacos.</p>
         <p><h2>Ingredients</h2></p>
